# api/docs/swagger.json
@@ -19,7 +19,11 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
             }
         },
         "/logout": {
@@ -46,7 +50,11 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
             }
         },
         "/me": {
@@ -58,6 +66,44 @@
                         "schema": {
                             "$ref": "#/definitions/main.ProfileResultDto"
                         }
+                    }
+                }
+            }
+        },
+        "/profile-picture": {
+            "get": {
+                "summary": "Retrieve profile picture",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "summary": "Update profile picture",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Profile picture",
+                        "name": "picture",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Remove profile picture",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
